@@ -34,12 +34,14 @@ Jacobian_W(W, rho)
 
 \examples{
 example(NY_data)
-\dontrun{W <- as(as_dsTMatrix_listw(listw_NY), "dsCMatrix")
-I <- as(as_dgCMatrix_I(dim(W)[1]), "dtCMatrix")
+\dontrun{
+W <- as_dsTMatrix_listw(listw_NY)
+I <- as_dgCMatrix_I(dim(W)[1])
 IrW <- (I - 0.1 * W)
 CHOL <- chol(IrW)
 sum(2*log(diag(CHOL)))
-sum(log(1 - 0.1 * eigenw(listw_NY)))}
+sum(log(1 - 0.1 * eigenw(listw_NY)))
+}
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
